--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --main: hsl(222, 26%, 31%);
+  --keypad: hsl(223, 31%, 20%);
+  --screen: hsl(224, 36%, 15%);
+  --function-key: hsl(225, 21%, 49%);
+  --function-key-shadow: hsl(224, 28%, 35%);
+  --result-key: hsl(6, 63%, 50%);
+  --result-key-shadow: hsl(6, 70%, 34%);
+  --key: hsl(30, 25%, 89%);
+  --key-shadow: hsl(28, 16%, 65%);
+  --text: hsl(221, 14%, 31%);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.theme-contrast {
+  --main: hsl(268, 75%, 9%);
+  --keypad: hsl(268, 71%, 12%);
+  --screen: hsl(268, 71%, 12%);
+  --function-key: hsl(281, 89%, 26%);
+  --function-key-shadow: hsl(285, 91%, 52%);
+  --result-key: hsl(176, 100%, 44%);
+  --result-key-shadow: hsl(177, 92%, 70%);
+  --key: hsl(268, 47%, 21%);
+  --key-shadow: hsl(290, 70%, 36%);
+  --text: hsl(52, 100%, 62%);
+  --text-dark: hsl(198, 20%, 13%);
 }
+
+.theme-light {
+  --main: hsl(0, 0%, 90%);
+  --keypad: hsl(0, 5%, 81%);
+  --screen: hsl(0, 0%, 93%);
+  --function-key: hsl(185, 42%, 37%);
+  --function-key-shadow: hsl(185, 58%, 25%);
+  --result-key: hsl(25, 98%, 40%);
+  --result-key-shadow: hsl(25, 99%, 27%);
+  --key: hsl(45, 7%, 89%);
+  --key-shadow: hsl(35, 11%, 61%);
+  --text: hsl(60, 10%, 19%);
+}
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
